updated bio and project descriptions

--- a/src/index.html
+++ b/src/index.html
@@ -88,24 +88,18 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                My coding journey started at a co-work space in Sofia, Bulgaria,
-                seeing my friend's espresso fueled fingers fly across the
-                keyboard in a flow state, I realized that coding is creative,
-                and I love to create things.
+                Although born and raised in Silicon Valley, my coding journey took flight in a vibrant co-work space in Sofia, Bulgaria. Mesmerized by the dance of my friend's espresso-fueled fingers on the keyboard, accompanied by the tunes of Pink Floyd, I sensed a harmonious fusion of artistry and logic that left me captivated. It was in that revelatory moment that I yearned to expand my creative horizons and embarked on a new chapter, influenced by the innovative spirit that shaped my upbringing.
               </p>
               <p class="about-wrapper__info-text">
-                I started digging into online courses in 2022 and picked up a
-                mentor to help me navigate a path to becoming a front end web
-                developer. My intention is to be a part of a team building
-                modern web apps that will help people in some way big or small
-                to to help improve some aspect of their life.
+                In 2022, fueled by eagerness to broaden my knowledge, I dove into online courses and sought guidance from mentors who helped me carve a path toward becoming a front-end web developer. My ultimate goal is to contribute my skills to a dynamic team, crafting modern web applications that leave a positive impact on lives, no matter how small.
               </p>
 
               <p class="about-wrapper__info-text">
-                My other interests are playing classic rock, funk and R&B on my
-                guitar. I try get out in nature a few days a week with hikes in
-                the Bay Area hills. Travel always awakens my spirit, my recent
-                adventures led to living in Istanbul, Turkey for 6 months.
+                When not immersed in code, you'll find me strumming my guitar, playing classic rock, funk, and R&B. Nature beckons, and I prioritize regular hikes through the beautiful hills of the Bay Area. My spirit finds fulfillment in travel as well—I recently embraced new experiences during a six-month adventure living in Istanbul, Turkey.
+              </p>
+
+              <p>
+                This journey weaves together coding, music, nature, and travel, as I explore self-discovery, creativity, and making a difference. The innovative energy of my Silicon Valley upbringing continues to shape my interests and fuel my drive. Join me as I continue to grow, learn, and leave my mark in this ever-changing world.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -139,13 +133,10 @@
                 <h3 class="project-wrapper__text-title">Idea Board</h3>
                 <div>
                   <p class="mb-4">
-                    This is my first CRUD app! After about half a dozen side
-                    projects with React I took on this one as a challenge to
-                    prepare for technical interviews. I approached it with first
-                    trying to an idea with a title only in the card. I kept
-                    pushing myself to take project further with adding a
-                    character countdown in the body of the message and working
-                    on sorting by date and alphabetically.
+                    At the start, I wanted to keep things simple, so I started with just displaying the title on each card. But as I got more comfortable with the project, I pushed myself to add more features. One of the things I came up with was a character countdown in the message body, which was a fun addition.
+                    <br>
+                    <br>
+                    Another aspect I worked on was implementing sorting capabilities. Now, users can sort their entries by date or alphabetically, making it easier to organize and find specific items.
                   </p>
                 </div>
                 <a
@@ -201,11 +192,13 @@
                 </h3>
                 <div>
                   <p class="mb-4">
-                    This was my first professional project. It was a lesson in
-                    working with a companies branding assets to deliver a
-                    responsive ad that would help them achieve their marketing
-                    goals. Due to the google ads ran with this landing page they
-                    experienced a huge increase in leads generated.
+                    This was my first professional project. It provided me with invaluable experience in leveraging a company's branding assets to create a responsive ad that aligned with their marketing objectives. The implementation of Google Ads alongside the landing page resulted in a substantial surge in lead generation for the company.
+                    <br>
+                    <br>
+                    "I highly recommend Nate for any front-end web dev project. Nate coded an on-brand landing page for our Google AdWords initiative. Conversion increased by 100% from the previous landing page. Because of the innovative design element of capturing emails before prompting the appointment schedule, we captured and re-engaged potential clients who would have abandoned the process without us knowing about them."  
+                    <br>
+                    <br>
+                    <em><b>Peter Khoury - Founder & Executive Presentation Coach</b></em>
                   </p>
                 </div>
                 <a
@@ -259,17 +252,13 @@
                 <h3 class="project-wrapper__text-title">Calculator</h3>
                 <div>
                   <p class="mb-4">
-                    The problem was that I had little experience with creating
-                    Javascript logic. After a few basic API projects my mentor
-                    presented a vanilla JS calculator as a way of leveling up my
-                    logic skills. I must admit at the time where my skills were
-                    at this seemed overwhelming. To overcome procastination I
-                    figured I would start with something simple to just get the
-                    ball rolling on the project. I got basic design going with
-                    HTML and CSS. Where do we go from there? Can we get a number
-                    in the display? Inch by inch I moved forward with project
-                    and overcame numerous challenges. After it was completed in
-                    vanilla JS, I refactored it into React.
+                    At the start of this project, I realized my JavaScript logic skills were limited. To level up, my mentor suggested building a vanilla JS calculator. I felt overwhelmed initially, but I decided to start with a simple HTML and CSS design to get things moving.
+                    <br>
+                    <br>
+                    Step by step, I faced and conquered challenges along the way. One of my early wins was figuring out how to display numbers on the calculator's screen. It may seem small, but it was a significant milestone for me.
+                    <br>
+                    <br>
+                    After completing the calculator in vanilla JS, I didn't stop there. I refactored it into React to improve functionality and maintainability. This decision paid off, giving me a deeper understanding of React's power.
                   </p>
                 </div>
                 <a
@@ -323,13 +312,7 @@
                 <h3 class="project-wrapper__text-title">Tic Tac Toe</h3>
                 <div>
                   <p class="mb-4">
-                    On the surface of it I thought a Tic Tac Toe app would be
-                    simple after completing a React Calculator. I was wrong. It
-                    can be simple or you can make it more complex by playing
-                    against a computer, which I did. I had a breakthrough in
-                    this project with working with reducers, learning about to
-                    keep functions simple, and seeing that you can pass booleans
-                    as arguments in functions to part of state on and off.
+                    Initially, I thought creating a Tic Tac Toe app would be straightforward after completing a React Calculator. However, I was mistaken. The complexity increased when I decided to implement a computer player. During the project, I had a breakthrough in working with reducers, simplifying functions, and utilizing booleans as state toggles. It was a valuable learning experience that enhanced my problem-solving skills and provided insights into state management. I'm proud of the progress made and the lessons learned.
                   </p>
                 </div>
                 <a
@@ -383,15 +366,9 @@
                 <h3 class="project-wrapper__text-title">Markdown Previewer</h3>
                 <div>
                   <p class="mb-4">
-                    This project helped me to realize that packages can be an
-                    tool to arrive at a solution. I don't need to create a
-                    hammer to hit a nail. I just need to find the right hammer
-                    for the nail. Navigating the documentation on the associated
-                    packages for this project was a beast. I found a solution
-                    where only one package was needed to be installed and did
-                    not have as many other dependent packages, so I rolled with
-                    that solution because I figured it would be easier to
-                    troubleshoot.
+             
+
+                    Through this project, I realized the power of leveraging packages as efficient tools to reach solutions rather than reinventing the wheel. Navigating extensive package documentation was challenging, but I found a streamlined solution with minimal dependencies, making troubleshooting easier and enabling a focus on core functionality. This experience emphasized the value of selecting appropriate tools, exploring documentation thoroughly, and embracing simplicity and efficiency in development.
                   </p>
                 </div>
                 <a
@@ -445,13 +422,7 @@
                 <h3 class="project-wrapper__text-title">Pomodoro Timer</h3>
                 <div>
                   <p class="mb-4">
-                    I feel like with this project things were starting to click
-                    in my understanding of state management. One of the
-                    challenges was to figure out how to get a clock to
-                    countdown. Once I overcame that block the project rolled
-                    pretty smoothly. I decided throw in a little self imposed
-                    challenge of having the UI of the timer remote toggle colors
-                    depending on if the user is in 'session' or on 'break'.
+                    During this project, I experienced a significant breakthrough in my understanding of state management. One of the challenges I faced was implementing a countdown clock, which required some creative problem-solving. Once I overcame that obstacle, the project progressed smoothly. As an additional self-imposed challenge, I incorporated a feature where the UI of the timer would dynamically toggle colors based on whether the user was in a 'session' or 'break' mode.
                   </p>
                 </div>
 
