added pomodoro ts to projects, deleted the skills bar at the end

--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://pomodoro-blush-five.vercel.app/"
+                  href="https://pomodoro-ts-one.vercel.app/"
                 >
                   See Live
                 </a>
@@ -438,7 +438,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/codeAdventureNow/Pomodoro"
+                  href="https://github.com/codeAdventureNow/Pomodoro_TS"
                 >
                   Source Code
                 </a>
@@ -448,7 +448,7 @@
               <div class="project-wrapper__image load-hidden">
                 <a
                   rel="noreferrer"
-                  href="https://pomodoro-blush-five.vercel.app/"
+                  href="https://pomodoro-ts-one.vercel.app/"
                   target="_blank"
                 >
                   <div
@@ -470,30 +470,6 @@
           </div>
           <!-- /END Project -->
 
-          
-    <section>
-      <div class="skill">
-        <h1>My Skills</h1>
-
-        <li>
-          <h3>HTML</h3>
-          <span class="bar"><span class="html"></span></span>
-        </li>
-        <li>
-          <h3>CSS</h3>
-          <span class="bar"><span class="css"></span></span>
-        </li>
-        <li>
-          <h3>JAVASCRIPT</h3>
-          <span class="bar"><span class="javascript"></span></span>
-        </li>
-        <li>
-          <h3>REACT
-          <span class="bar"><span class="react"></span></span>
-        </li>
-        
-      </div>
-    </section>
 
     <!-- **** Contact Section **** -->
     <section id="contact">
